fix: add gap between cards back to mobile view

--- a/challenges/time-tracking-dashboard-main/src/App.css
+++ b/challenges/time-tracking-dashboard-main/src/App.css
@@ -16,6 +16,12 @@
   max-width: 1280px;
 }
 
+.cards-container {
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+}
+
 @media only screen and (min-width: 1200px) {
   .app-root {
     height: 100vh;
@@ -33,8 +39,7 @@
   }
 
   .cards-container {
-    display: flex;
-    flex-wrap: wrap;
+    flex-flow: row wrap;
     width: 620px;
     gap: 16px;
   }
